--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
   "author": "“Oliver <“oliver@enesnet.de”> (https://enesnet.de)",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-transform-classes": "^7.14.5",
+    "@babel/plugin-transform-typescript": "^7.14.6",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-typescript": "^7.14.5",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.31.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^36.0.6",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "typescript": "^4.3.5"
   }
 }
